# ESMSeek

./: .gitignore  README.md  RUN.md  pyproject.toml
comparisons/: build_pool.py  candidates.faa  labels.tsv  run_aligner.py  score_discrimination.py  seeds.faa  split_seeds.py
comparisons/results/v1/: esmc.score.tsv  fold.score.tsv  foldseek_comparison_v1.md
comparisons/results/v2/: README.md  esmc_aln.allseeds.score.tsv  esmc_aln.aniso_off.score.tsv  esmc_aln.score.tsv
data/search/: lsr_candidates.faa
data/seeds/: Dn29.faa
examples/: contigs.fna  proteins.faa  seeds.faa
src/esmseek/: __init__.py  align.py  calibrate.py  cli.py  foldseek.py  pipeline.py  records.py  search.py  seqio.py  translate.py
src/esmseek/embedders/: __init__.py  base.py  esmc.py  hashing.py
tests/: _util.py  test_align.py  test_calibrate.py  test_cli.py  test_embedders.py  test_engines.py  test_pipeline.py  test_search.py  test_seqio.py  test_translate.py
